# commonsc-marketplace-

./: .gitignore  Cargo.toml
.github/workflows/: README.md  deploy-marketplace.yml  deploy-website.yml  release-devkit.yml
algorithms/_naughty/: README.md
algorithms/_naughty/fs-escape/: manifest.template.json
algorithms/_naughty/fs-escape/naughty/: main.py
algorithms/_naughty/network-fetch/: manifest.template.json
algorithms/_naughty/network-fetch/naughty/: main.py
algorithms/_naughty/socket-open/: manifest.template.json
algorithms/_naughty/socket-open/naughty/: main.py
algorithms/_naughty/subprocess-spawn/: manifest.template.json
algorithms/_naughty/subprocess-spawn/naughty/: main.py
algorithms/actn3-sprint/: README.md  manifest.template.json
algorithms/actn3-sprint/actn3_sprint/: __init__.py  main.py
algorithms/actn3-sprint/fixtures/: input.json
algorithms/asparagus-odour/: README.md  manifest.template.json
algorithms/asparagus-odour/asparagus_odour/: __init__.py  main.py
algorithms/asparagus-odour/fixtures/: input.json
algorithms/earwax-type/: README.md  manifest.template.json
algorithms/earwax-type/earwax_type/: __init__.py  main.py
algorithms/earwax-type/fixtures/: input.json
algorithms/eye-colour/: README.md  manifest.template.json
algorithms/eye-colour/eye_colour/: __init__.py  main.py
algorithms/eye-colour/fixtures/: input.json
algorithms/freckles/: README.md  manifest.template.json
algorithms/freckles/fixtures/: input.json
algorithms/freckles/freckles/: __init__.py  main.py
algorithms/photic-sneeze/: README.md  manifest.template.json
algorithms/photic-sneeze/fixtures/: input.json
algorithms/photic-sneeze/photic_sneeze/: __init__.py  main.py
algorithms/prs-height/: README.md  manifest.template.json  weights.tsv
algorithms/prs-height/fixtures/: input.json
algorithms/prs-height/prs_height/: __init__.py  main.py
algorithms/raw/: .gitignore  build_evidence_index.py  distill_gwas_evidence.py
algorithms/test-submission/: README.md  manifest.template.json
algorithms/test-submission/fixtures/: input.json
algorithms/test-submission/test_submission/: __init__.py  main.py
crates/devkit/: Cargo.toml
crates/devkit/src/: canonical.rs  evidence.rs  init.rs  lib.rs  main.rs  manifest.rs  publish.rs  register.rs  run.rs  signing.rs  validate.rs
crates/host/: Cargo.toml  README.md
crates/host/sidecar/: deno.json  run.ts
crates/host/src/: lib.rs  main.rs  sidecar.rs
crates/host/tests/: privacy.rs
crates/marketplace/: Cargo.toml  README.md
crates/marketplace/src/: admin.rs  evidence.rs  main.rs  payments.rs
deploy/: README.md  UPDATE-NGINX.md  deploy.sh
deploy/analytics/: README.md  tally-downloads.sh  weekly-report.sh
deploy/nginx/: apex.conf.snippet  api.commonsc.io.conf  commonsc-rate-limits.conf  status.commonsc.io.conf
deploy/status/: index.html
deploy/systemd/: commonsc-marketplace.service  stripe-secret.example.conf
discovery/: llms.txt
discovery/.well-known/: commonsc.json
docs/: spec-chat-contributor.md  spec-unified-execution.md
product/schemas/: README.md  discovery.schema.json  gate-result.schema.json  genomic-io.schema.json  manifest.schema.json  result.schema.json
product/schemas/examples/: gate-result.example.json  manifest.example.json  result.example.json  variant-set.example.json
registry/: index.json  keys.json
registry/bundles/commonsc/asparagus-odour/0.1.0/: bundle.tar.zst  manifest.json
registry/bundles/commonsc/earwax-type/0.1.0/: bundle.tar.zst  manifest.json
registry/bundles/commonsc/eye-colour/0.1.0/: bundle.tar.zst  manifest.json
registry/bundles/commonsc/freckles/0.1.0/: bundle.tar.zst  manifest.json
registry/bundles/commonsc/photic-sneeze/0.1.0/: bundle.tar.zst  manifest.json
registry/bundles/druidalabs/prs-height/0.1.0/: bundle.tar.zst  manifest.json
registry/bundles/druidalabs/test-submission/0.1.0/: bundle.tar.zst  manifest.json
