[workspace]
resolver = "2"
members = [
    "crates/host",
    "crates/devkit",
    "crates/marketplace",
]

[workspace.package]
edition = "2021"
rust-version = "1.77"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zstd = "0.13"
tar = "0.4"
tempfile = "3"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonschema = { version = "0.18", features = ["draft202012"] }
url = "2"
hex = "0.4"
base64 = "0.22"
