[package]
name = "commonsc-devkit"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "CommonSense contributor toolkit: validate and publish algorithm bundles to a registry."

[lib]
name = "commonsc_devkit"
path = "src/lib.rs"

[[bin]]
name = "commonsc-devkit"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
zstd.workspace = true
tar.workspace = true
jsonschema.workspace = true
url.workspace = true
hex.workspace = true
base64.workspace = true
ureq.workspace = true
dirs.workspace = true

# Shares the Tier-1 runtime so `devkit run` executes a bundle through the exact
# same Deno + Pyodide sidecar the desktop app and (later) the marketplace gate use.
commonsc-host = { path = "../host" }
